# cpp-msgpack-rpc

./: .clang-format  .clang-tidy  .clang-tidy-checker  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md  cspell.json  iwyu_mappings.imp  pyproject.toml  vcpkg-configuration.json  vcpkg.json
doc/: CMakeLists.txt
doc/doxygen/: CMakeLists.txt  Doxyfile.in  examples.h  namespaces.h
doc/sphinx/: CMakeLists.txt  start_auto_build.sh.in
doc/sphinx/src/: conf.py  convention.md  index.rst
doc/sphinx/src/basic_apis/: clients.md  common.md  configurations.md  index.rst  logging.md  servers.md
doc/sphinx/src/change_log/: index.rst  v0.2.0.md
doc/sphinx/src/configurations/: index.md  index.rst
doc/sphinx/src/design/: classes.rst  image_of_usage.rst  index.rst
src/: CMakeLists.txt  source_list.cmake  unity_source.cpp
src/msgpack_rpc/addresses/: posix_shared_memory_address.cpp  posix_shared_memory_address.h  tcp_address.cpp  tcp_address.h  unix_socket_address.cpp  unix_socket_address.h  uri.cpp
src/msgpack_rpc/clients/: server_exception.cpp
src/msgpack_rpc/clients/impl/: call.h  call_future_impl.h  call_list.h  call_promise.h.h  client_connector.h  (+9 more)
src/msgpack_rpc/common/: msgpack_rpc_exception.cpp  statuc_code.cpp  status.cpp  status_code.cpp
src/msgpack_rpc/config/: client_config.cpp  config_parser.cpp  executor_config.cpp  logging_config.cpp  message_parser_config.cpp  reconnection_config.cpp  server_config.cpp  server_endpoint_config.cpp
src/msgpack_rpc/executors/: general_executor.cpp  i_single_thread_executor.h  single_thread_executor.cpp  timer.h  wrapping_executor.cpp
src/msgpack_rpc/impl/: config.h.in
src/msgpack_rpc/logging/: log_sinks.cpp  source_location_view_test.cpp
src/msgpack_rpc/messages/: message_parser.cpp  message_type.cpp  serialized_message.cpp
src/msgpack_rpc/methods/: method_dict.h  method_exception.cpp  method_processor.cpp  method_processor_impl.h
src/msgpack_rpc/servers/: server.h  server_connection.h  server_impl.h  stop_signal_handler.h
src/msgpack_rpc/transport/: acceptor.h  acceptor_impl.h  async_connect.h  backend_list.h  background_task_state_machine.h  connection.h  connection_list.h  connector.h  create_default_backend_list.h  filepath_acceptor_factory.h  filepath_connector.h  ip_acceptor_factory.h  ip_connector.h  ip_resolver.h  ip_resolver_impl.h  stream_connection_impl.h  stream_socket_impl.h
src/msgpack_rpc/util/: copy_string_to_iterator.h  format_msgpack_object.cpp  format_msgpack_object.h  format_msgpack_object_to.h  format_msgpack_object_to_string.cpp  format_msgpack_object_to_string.h
tests/bench/: CMakeLists.txt
tests/bench/echo/: CMakeLists.txt  bench.py  bench_random.py  client.cpp  client_random.cpp  common.h  server.cpp
tests/bench/memory/: CMakeLists.txt  shared_objects.cpp
tests/durability/: CMakeLists.txt  conftest.py  minimal_config.toml  multiple_clients_config.toml  process_executor.py  request_continuously.cpp  serve_methods.cpp  test_diconnect_and_reconnect_continuously.py  test_kill_and_reconnect_continuously.py  test_multiple_clients.py  test_request_continuously.py
tests/integ/client/: CMakeLists.txt  call_failure_test.cpp  call_methods_test.cpp  create_test_logger.cpp  many_calls_test.cpp  notifications_test.cpp  reconnection_test.cpp  source_list.cmake  unity_source.cpp
tests/integ/config/: CMakeLists.txt  conftest.py  parse_toml.cpp
tests/integ/executor_interruption/: CMakeLists.txt  general_executor.cpp  single_thread_executor.cpp
tests/integ/from_python/: CMakeLists.txt  common.h  conftest.py  server.cpp  test_client.py
tests/integ/inter_process/: CMakeLists.txt  client.cpp  common.h  conftest.py  inter_process_rpc_test.py  server.cpp  test.py
tests/integ/logging_test/: CMakeLists.txt  conftest.py  console_log_configs.toml  console_log_test.py  create_scrubber.py  rotating_file_log_configs.toml  rotating_file_log_test.py  write_log.cpp
tests/integ/server/: CMakeLists.txt  catch_event_listener.cpp  check_connectivity.cpp  check_connectivity.h  create_server_test.cpp  create_test_logger.cpp  create_test_logger.h  exception_in_server.cpp  source_list.cmake  unity_source.cpp  use_server_test.cpp
tests/integ/transport/: CMakeLists.txt  acceptor_test.cpp  catch_event_listener.cpp  connector_test.cpp  create_test_logger.cpp  resolver_test.cpp  send_message_test.cpp  source_list.cmake  tcp_test.cpp  transport_helper.h  unity_source.cpp
tests/units/: CMakeLists.txt  catch_event_listener.cpp  create_test_logger.cpp  source_list.cmake  unity_source.cpp
tests/units/addresses/: address_test.cpp  posix_shared_memory_address_test.cpp  tcp_address_test.cpp  unix_socket_address_test.cpp  uri_test.cpp
tests/units/clients/: client_builder_test.cpp  client_test.cpp  server_exception_test.cpp
tests/units/common/: status_code_test.cpp  status_test.cpp
tests/units/config/: client_config_test.cpp  config_parser_test.cpp  executor_config_test.cpp  logging_config_test.cpp  message_parser_config_test.cpp  reconnection_config_test.cpp  server_config_test.cpp
tests/units/executors/: general_executor_test.cpp  mock_executor.h  single_thread_executor_test.cpp  timer_test.cpp  wait_last_exception_in.h  wrapping_executor_test.cpp
tests/units/logging/: source_location_view_test.cpp
tests/units/messages/: call_result_test.cpp  message_parser_test.cpp  message_serializer_test.cpp  message_type_test.cpp  method_name_test.cpp  method_name_view_test.cpp  parsed_parameters_test.cpp  serialized_message_test.cpp
tests/units/methods/: functional_method_test.cpp  method_exception_test.cpp  method_processor_test.cpp  mock_method.h
tests/units/servers/: server_builder_impl_test.cpp  server_builder_test.cpp  server_impl_test.cpp  server_test.cpp
tests/units/transport/: async_connect_test.cpp  backend_list_test.cpp  connection_list_test.cpp  connection_wrapper_test.cpp  mock_acceptor.h  mock_acceptor_factory.h  mock_backend.h  mock_connection.h  mock_connector.h  mock_resolver.h
tests/units/util/: format_msgpack_object_test.cpp  format_msgpack_object_to_string_test.cpp
(+243 files in other folders)
