[tool.poetry]
name = "cpp-msgpack-rpc"
version = "0.0.0"
description = ""
authors = ["Kenta Kabashima <kenta_program37@hotmail.co.jp>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
# Some tools implicitly require setuptools.
setuptools = "^80.1.0"

[tool.poetry.group.doc.dependencies]
myst-parser = "^4.0.1"
sphinx = "^8.2.3"
sphinx-autobuild = "^2024.10.3"
sphinxcontrib-plantuml = "^0.30"
sphinx-orange-book-theme = "^0.15.0"
breathe = "^4.36.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-approvaltests = "^0.2.4"
msgpack = "^1.1.0"
pytest-asyncio = "^0.26.0"
psutil = "^7.0.0"
pandas = "^2.2.3"
plotly = "^6.0.1"
kaleido = "==0.2.1"
statsmodels = "^0.14.4"
fastjsonschema = "^2.21.1"
pytomlpp = "^1.0.13"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
click = "^8.1.8"
cmakelang = "^0.6.13"
doc8 = "^1.1.2"
pre-commit = "^4.2.0"
clang-tidy-checker = "^0.6.0"
lcov_cobertura = "^2.1.1"
tqdm = "^4.67.1"
lizard = "^1.17.28"
isort = "^6.0.1"
jsonschema2md = "^1.5.2"
pylint = "^3.3.6"
flake8 = "^7.2.0"
mypy = "^1.15.0"
pandas-stubs = "^2.2.3.250308"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
disable = "too-many-instance-attributes,line-too-long,fixme"
load-plugins = "pylint.extensions.docparams"

[tool.isort]
profile = "black"
